[gd_scene load_steps=14 format=3 uid="uid://0w7ambp03kof"]

[ext_resource type="Script" path="res://scenes/ui/cluesActionButton/clue_action_button.gd" id="1_cuete"]
[ext_resource type="Resource" uid="uid://cmiijlqwn1yyk" path="res://scenes/resources/actions/items/clues/eyeglass_test_clue.tres" id="2_1ea1r"]
[ext_resource type="Texture2D" uid="uid://d72wcglmseqx" path="res://textures/ui/Battle/Menu/Clues and Items Submenu/BattleMenu_Submenu_Clues_Icon_TimeCost.png" id="2_y0wmj"]
[ext_resource type="FontFile" uid="uid://cuidb51mn7j7j" path="res://textures/ui/Font/OpenSans-Regular.ttf" id="3_q2dsb"]
[ext_resource type="FontFile" uid="uid://dkn1tuxa3ybyj" path="res://textures/ui/Font/OpenSans-Semibold.ttf" id="5_fey53"]
[ext_resource type="Script" path="res://scenes/rand_audio_stream_player.gd" id="6_0u2gg"]
[ext_resource type="AudioStream" uid="uid://mqwkbuokfl1q" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Menu Option/Select Menu Option 1.mp3" id="7_tscwi"]
[ext_resource type="AudioStream" uid="uid://bx276jn07ckcy" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Menu Option/Select Menu Option 2.mp3" id="8_hs3do"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7mw2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukof6"]
bg_color = Color(0.117647, 0.109804, 0.211765, 0.972549)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wcsd"]
bg_color = Color(0.0901961, 0.0823529, 0.168627, 0.972549)
border_color = Color(0.8, 0.8, 0.8, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7il1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf4d3"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.153117, 0.144981, 0.263135, 1)

[node name="Clue Button" type="Control"]
custom_minimum_size = Vector2i(314, 36)
layout_mode = 3
anchors_preset = 0
offset_right = 314.0
offset_bottom = 36.0
script = ExtResource("1_cuete")
data = ExtResource("2_1ea1r")

[node name="Button" type="Button" parent="."]
texture_filter = 1
custom_minimum_size = Vector2i(0, 36)
offset_left = 7.0
offset_top = 1.0
offset_right = 305.0
offset_bottom = 37.0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0.647059, 0.164706, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_q2dsb")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_c7mw2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ukof6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2wcsd")
theme_override_styles/focus = SubResource("StyleBoxFlat_n7il1")
text = "Clues Lorem Ipsum"
alignment = 0
icon_alignment = 2

[node name="BattleMenuSubmenuCluesIconTimeCost" type="TextureRect" parent="Button"]
offset_left = 264.0
offset_top = 8.0
offset_right = 280.0
offset_bottom = 26.0
texture = ExtResource("2_y0wmj")

[node name="CostLabel" type="Label" parent="Button/BattleMenuSubmenuCluesIconTimeCost"]
texture_filter = 1
offset_left = 24.0
offset_top = -6.0
offset_right = 36.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("5_fey53")
theme_override_font_sizes/font_size = 20
text = "0"
visible_characters = 1

[node name="HSeparator2" type="HSeparator" parent="."]
custom_minimum_size = Vector2i(314, 0)
offset_left = -1.0
offset_top = 34.0
offset_right = 313.0
offset_bottom = 38.0
theme_override_styles/separator = SubResource("StyleBoxFlat_nf4d3")

[node name="PressedAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("6_0u2gg")
samples = [ExtResource("7_tscwi"), ExtResource("8_hs3do")]
